--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -89,7 +89,7 @@
             </label>
           </th>
           <th>ID</th>
-          <th>状态</th>
+          <th style="width:50px;">状态</th>
           <th>来源</th>
           <th>质检任务 ID</th>
           <th>物料采购 ID</th>
@@ -107,7 +107,7 @@
           <th>目标仓库</th>
           <th>提交入库时间</th>
           <th>实际入库时间</th>
-          <th>确认人</th>
+          <th style="width:50px;">确认人</th>
           <th>备注</th>
         </tr>
       #{list items: records, as: 'r'}
