--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -15,7 +15,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <form  method="post" id="plan_form">
+    <form method="post" id="plan_form">
       <table class="table table-condensed table-bordered">
         <tr>
           <th>Id</th>
@@ -52,7 +52,7 @@
             <textarea rows="5" name="dp.memo" class="span12">${dp.memo}</textarea>
             <button id="plan_update_btn" class="btn btn-primary">更新</button>
             <a href="@{Excels.deliverplans(dp.id)}" class="btn btn-primary" target="_blank"><i
-                   class="icon-download-alt"></i>导出出仓单</a>
+                class="icon-download-alt"></i>导出出仓单</a>
           </td>
         </tr>
       </table>
@@ -99,6 +99,7 @@
 <div class="row-fluid">
   <div class="span12">
     <input type="hidden" name="dp.id" value="${dp.id}">
+    <!-- TODO: 进行异步加载(采取搜索的方式) -->
       #{render 'ProcureUnits/_unit_list.html', units:plan_units, checkbox:true, key:'plan', deliveryplan:true/}
   </div>
 </div>
