--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -76,8 +76,8 @@
     <td>
       <!-- FnSku 下载 Label -->
         #{if unit.selling?.fnSku}
-          <a href="@{Sellings.sellingLabel(unit.sid)}" class="btn btn-success btn-block">
-            <i class="icon-download-alt"></i> ${unit.selling.fnSku}
+          <a href="@{ProcureUnits.fnSkuLable(unit.sid)}" target="_blank" class="btn btn-success btn-block">
+            <i class="icon-download-alt"></i>${unit.selling.fnSku}
           </a>
         #{/if}
         #{elseif unit.selling != null}
@@ -85,9 +85,6 @@
             补全 FnSku
           </a>
         #{/elseif}
-      <a href="@{ProcureUnits.fnSkuLable(unit.sid)}" class="btn btn-success btn-block"><i class="icon-download-alt">
-        </i> ${unit.selling.fnSku}
-      </a>
     </td>
     <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}</td>
     <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
