--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -62,11 +62,11 @@
 <tr>
   <th>预计运输时间</th>
   <td>
-    <input type="date" name="unit.attrs.planShipDate" value="${unit.attrs.planShipDate.date()}">
+    <input type="date" name="unit.attrs.planShipDate" id="planShipDate" value="${unit.attrs.planShipDate.date()}">
   </td>
   <th>预计到库时间</th>
   <td>
-    <input type="date" name="unit.attrs.planArrivDate" value="${unit.attrs.planArrivDate.date()}">
+    <input type="date" name="unit.attrs.planArrivDate" id="planArrivDate" value="${unit.attrs.planArrivDate.date()}">
     <span class="add-on">? 天</span>
   </td>
 </tr>
