--- a/core/app/views/ProcureUnits/_splitOnSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnSelling.html
@@ -42,7 +42,7 @@
   </td>
   <th>去往仓库</th>
   <td>
-    <select name="unit.whouse.id" id="warehouse_select">
+    <select name="newUnit.whouse.id" id="warehouse_select">
       <option value="">请选择</option>
     #{list items:whouses, as:'w'}
       <option value="${w.id}">${w.name}</option>
@@ -53,11 +53,11 @@
 <tr>
   <th>预计运输时间</th>
   <td>
-    <input type="date" name="newUnit.attrs.planShipDate" value="${newUnit.attrs.planShipDate.date()}">
+    <input type="date" name="newUnit.attrs.planShipDate" id="planShipDate" value="${newUnit.attrs.planShipDate.date()}">
   </td>
   <th>预计到库时间</th>
   <td>
-    <input type="date" name="newUnit.attrs.planArrivDate" value="${newUnit.attrs.planArrivDate.date()}">
+    <input type="date" name="newUnit.attrs.planArrivDate" id="planArrivDate" value="${newUnit.attrs.planArrivDate.date()}">
   </td>
 </tr>
 
