--- a/core/app/views/ShipPlans/_form.html
+++ b/core/app/views/ShipPlans/_form.html
@@ -7,24 +7,24 @@
   <th>ID</th>
   <td>${plan.id}</td>
 
-  <th>Selling ID</th>
+  <th><span style="color:red">*</span>Selling ID</th>
   <td>
-    <input type="text" value="${plan.selling?.sellingId}" name="plan.selling.sellingId">
+    <input type="text" value="${plan.selling?.sellingId}" name="plan.selling.sellingId" required>
   </td>
 </tr>
 <tr>
-  <th>SKU</th>
+  <th><span style="color:red">*</span>SKU</th>
   <td>
-    <input type="text" value="${plan.product?.sku}" name="plan.product.sku">
+    <input type="text" value="${plan.product?.sku}" name="plan.product.sku" required>
   </td>
 
-  <th>产品名称</th>
+  <th><span style="color:red">*</span>产品名称</th>
   <td>
-    <input type="text" value="${plan.product?.abbreviation}" name="plan.product.abbreviation">
+    <input type="text" value="${plan.product?.abbreviation}" name="plan.product.abbreviation" required>
   </td>
 </tr>
 <tr>
-  <th>去往仓库</th>
+  <th><span style="color:red">*</span>去往仓库</th>
   <td>
     <select name="plan.whouse.id" id="warehouse_select">
       <option value="">请选择</option>
@@ -34,9 +34,9 @@
     </select>
   </td>
 
-  <th>预计运输时间</th>
+  <th><span style="color:red">*</span>预计运输时间</th>
   <td>
-    <input type="date" value="${plan.planShipDate?.date()}" name="plan.planShipDate">
+    <input type="date" value="${plan.planShipDate?.date()}" name="plan.planShipDate" required>
   </td>
 </tr>
 <tr>
@@ -45,13 +45,13 @@
     <input type="date" value="${plan.planArrivDate?.date()}" name="plan.planArrivDate">
   </td>
 
-  <th>计划出库数量</th>
+  <th><span style="color:red">*</span>计划出库数量</th>
   <td>
-    <input type="text" class="input-mini" value="${plan.planQty}" name="plan.planQty" id="planQty">
+    <input type="text" class="input-mini" value="${plan.planQty}" name="plan.planQty" id="planQty" required>
   </td>
 </tr>
 <tr>
-  <th>运输方式</th>
+  <th><span style="color:red">*</span>运输方式</th>
   <td colspan="4">
   #{list items:models.procure.Shipment.T.values(), as:'t'}
     <label class="radio">
