*  补上缺失的 创建时间 和 创建人 列

--- a/core/app/views/ShipPlans/index.html
+++ b/core/app/views/ShipPlans/index.html
@@ -136,6 +136,8 @@
             </dl>
           </td>
           <td>${plan.shipType.label()}</td>
+          <td>#{time_tooltip time:plan.createDate/}</td>
+          <td>${plan.creator?.username}</td>
         </tr>
       #{/list}
       </table>
