--- a/core/app/views/Orders/_order_table_tr.html
+++ b/core/app/views/Orders/_order_table_tr.html
@@ -9,6 +9,8 @@
     <th>UserId</th>
     <th>Buyer</th>
     <th>SKU</th>
+    <th style="width:100px;">PromotionIDs</th>
+    <th>DiscountPrice</th>
     <th>Phone</th>
     <th>Email</th>
     <th name="createDate" class="sortable">Create <i class="icon-sort"></i></th>
@@ -42,6 +44,8 @@
     <td>${ord.userid}</td>
     <td>${ord.buyer}</td>
     <td>${ord.showItemSku()}</td>
+    <td>${ord.showPromotionIDs()}</td>
+    <td>${ord.showDiscountPrice()}</td>
     <td>${ord.phone}</td>
     <td>
         <a href="javascript:void(0)" rel="tooltip" title="${ord.email}">${ord.email != null ? ord.email.split("@")[0] : ord.email}</a>
@@ -60,7 +64,7 @@
     </td>
 </tr>
 <tr style="display:none" id="order_index_${ord_index}">
-    <td colspan="15">
+    <td colspan="17">
         #{render './_order_fees.html', fees: ord.fees/}
     </td>
 </tr>
