--- a/core/app/views/ShipPlans/index.html
+++ b/core/app/views/ShipPlans/index.html
@@ -64,6 +64,7 @@
         </div>
       </div>
     </div>
+  #{include 'Deliveryments/box_number_model.html'/}
   </form>
 
   <div class="row-fluid">
