--- a/core/app/views/ShipPlans/index.html
+++ b/core/app/views/ShipPlans/index.html
@@ -1,5 +1,5 @@
 #{extends 'main_full.html' /}
-#{set title:"采购单元列表 (${plans.size()})"  /}
+#{set title:"出货计划 (${plans.size()})"  /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
     #{script 'shipplans/index.coffee'/}
@@ -115,7 +115,7 @@
           <td>
               #{if plan.selling?.fnSku}
                 <a href="@{Sellings.sellingLabel(plan.selling?.sellingId)}" class="btn btn-success btn-block">
-                  <i class="icon-download-alt"></i> ${plan.selling.fnSku}
+                  <i class="icon-download-alt"></i> ${plan.selling?.fnSku}
                 </a>
               #{/if}
               #{elseif plan.selling != null}
