--- a/core/app/views/Orders/show.html
+++ b/core/app/views/Orders/show.html
@@ -5,9 +5,7 @@
         #{script 'orders/orders.coffee'/}
     #{/set}
 #{/ifnot}
-
 #{flash_alert /}
-
 #{errorMsgs /}
 
 
@@ -15,22 +13,15 @@
   <li class="active">
     <a href="#orderinfo" data-toggle='tab'>订单信息</a>
   </li>
-
   <li>
     <a href="#invoiceinfo" data-toggle='tab'>销售发票信息</a>
   </li>
-
   <li>
     <a href="#returninfo" data-toggle='tab'>退款发票信息</a>
   </li>
-
 </ul>
-
-
 <div id="below_tabContent" class="tab-content">
-
   <div class="tab-pane fade active in" id='orderinfo'>
-
   #{if ord == null}
     读取的 Order 不存在!
   #{/if}
@@ -39,7 +30,8 @@
       <!--
       <button data-url="@{Orders.refreshFee(ord.orderId)}" class="btn btn-warning btn-small" id="refreshFeeBtn">重新抓取费用</button>}
       -->
-      <button data-url="@{Orders.refreshFeeById(ord.orderId)}" class="btn btn-warning btn-small">重新抓取费用</button>&nbsp;&nbsp;
+      <button data-url="@{Orders.refreshFeeById(ord.orderId)}" class="btn btn-warning btn-small">重新抓取费用</button>
+      &nbsp;&nbsp;
       <a href="@{Orders.show(ord.orderId)}" class="btn btn-success btn-small">刷新</a>
         #{if ord.feedback}
           <a href="@{Feedbacks.show(ord.orderId)}" class="btn btn-success btn-small">跳转到 Feedback</a>
