*  增加 clipboard 插件

--- a/core/app/views/_js_header.html
+++ b/core/app/views/_js_header.html
@@ -17,4 +17,5 @@
 #{script 'bootstrap-multiselect.js'/}
 #{script 'component/notify.coffee'/}
 #{script 'component/popover.coffee'/}
+#{script 'clipboard.min.js'/}
 #{script 'main.js'/}
