--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -64,14 +64,14 @@
   #{list items:dtos, as:'dto'}
   <tr>
     <td class="sid">${dto.fid}</td>
-    <td style="min-width: 135px;">
+    <td style="min-width: 140px;">
       <a href="@{ProcureUnits.blank(dto.fid)}" target="_blank" style="font-size: 11px">采购计划</a>
       <a href="@{ShipPlans.blank(dto.fid)}" target="_blank" style="font-size: 11px">出库计划</a>
       <br/>
       <a href="@{Sellings.selling(dto.fid)}" target="_blank" style="font-size: 11px">Selling</a>
       <a href="${dto.asinLink()}" target="_blank" style="font-size: 11px">${dto.asin}</a>
-      <a class="btn btn-mini clipboard" data-clipboard-text="${dto.asin}" alt="复制 ASIN">
-        <i class="icon-pencil"></i>
+      <a class="btn btn-mini clipboard" data-clipboard-text="${dto.asin}">
+        <img class="clippy" src="/images/clippy.svg" width="11px" height="11px" alt="Copy to clipboard">
       </a>
     </td>
     <td style="color:#A5B600" data-dtofid='<%= dto.fid %>'>${dto.plan}</td>
