--- a/core/app/views/Whouses/edit.html
+++ b/core/app/views/Whouses/edit.html
@@ -5,12 +5,10 @@
 #{/set}
 
 #{errorMsgs /}
-
 #{flash_alert /}
-
 #{info_row title:'修改仓库' /}
 
-<div class="row">
+<div class="row-fluid">
     <div class="span12">
         <form id="update_form">
             <table class="table table-condensed table-bordered">
