*  Kitchen 模板统一到 Home 类别下进行上架. API 没有单独为 Kitchen 模板进行支持

--- a/core/app/views/Products/saleAmazon.html
+++ b/core/app/views/Products/saleAmazon.html
@@ -61,7 +61,7 @@
       #{select_field id:'account', name: 's.account.id', label: '上架账户', blank: true, items: accs /}
       #{select_field id:'market', name: 's.market', label:'市场', blank: true, items: models.market.M.values() /}
       #{select_field id: 'templateType', name: 's.aps.templateType', label: '模板类型', items: ['Computers',
-      'ConsumerElectronics', 'Wireless', 'HomeImprovement','Home', 'Games', 'Sports', 'Lighting', 'Kitchen']/}
+      'ConsumerElectronics', 'Wireless', 'HomeImprovement','Home', 'Games', 'Sports', 'Lighting']/}
       #{select_field id:'feedProductType', name: 's.aps.feedProductType', label: 'Feed Product Type', items:null,
       native: true /}
       #{text_field id:'salePrice', name: 's.aps.salePrice', label: '优惠销售价格', value: '' /}
