分拆页面报错

--- a/core/app/views/ProcureUnits/splitUnit.html
+++ b/core/app/views/ProcureUnits/splitUnit.html
@@ -22,7 +22,7 @@
       </tr>
       <tr>
         <th>产品名称</th>
-        <td>${unit.selling?.listing.product.abbreviation}</td>
+        <td>${unit?.product.abbreviation}</td>
         <th>采购数量</th>
         <td>${unit.qty()}</td>
       </tr>
