--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -6,8 +6,8 @@
   </td>
   <th style="width:100px;"><span style="color:red">*</span>SKU</th>
   <td>
-    <input type="text" name="unit.product.sku" id="unit_sku" value="${unit.product.sku}"
-    #{if unit.selling?.listing?.product?.sku} readonly #{/if} required autocomplete="off">
+    <input type="text" name="unit.product.sku" id="unit_sku" value="${unit.product?.sku}"
+    #{if unit.product?.sku} readonly #{/if} required autocomplete="off">
   </td>
 </tr>
 <tr>
