--- a/core/app/views/ProcureUnits/splitUnit.html
+++ b/core/app/views/ProcureUnits/splitUnit.html
@@ -30,7 +30,7 @@
         <th>预计交货时间</th>
         <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
         <th>去往仓库:</th>
-        <td>${unit.whouse.name}</td>
+        <td>${unit.whouse?.name}</td>
       </tr>
       <tr>
         <th>预计运输时间</th>
